Added contextual help in setting editor.

Restriction: There is a bug in Qt which prevents the fragment part
("#tabTools" for instance) to be transmitted to the browser. See
QTBUG-55300, https://bugreports.qt.io/browse/QTBUG-55300