src/QtlMovie/QtlMovieMainWindowBase.cpp
@@ -35,6 +35,7 @@
 #include "QtlMovie.h"
 #include "QtlMovieEditSettings.h"
 #include "QtlMovieAboutMediaTools.h"
+#include "QtlMovieHelp.h"
 #include "QtlNewVersionCheckerJson.h"
 #include "QtlTextFileViewer.h"
 #include "QtlTranslator.h"
@@ -273,39 +274,7 @@ void QtlMovieMainWindowBase::about()
 
 void QtlMovieMainWindowBase::showHelp()
 {
-    // Search the directory where help files are stored.
-    // Start with the application directory.
-    const QString appDir(QtlFile::absoluteNativeFilePath(QCoreApplication::applicationDirPath()));
-    QStringList dirs(appDir);
-
-#if defined(Q_OS_WIN) || defined(Q_OS_DARWIN)
-    // On Windows and Mac, add the local help subdirectory.
-    // When running the application from the build tree, also add the help
-    // subdirectory from some level upward from the application executable.
-    const QString toolPath(QtlFile::searchParentSubdirectory(appDir, "help"));
-    if (!toolPath.isEmpty()) {
-        dirs << toolPath;
-    }
-#endif
-
-#if defined(Q_OS_LINUX) || defined(Q_OS_UNIX)
-    // On UNIX, add various standard locations for help files.
-    dirs << "/usr/share/doc/qtlmovie"
-         << "/usr/share/help/qtlmovie"
-         << "/usr/local/doc/qtlmovie"
-         << "/usr/local/help/qtlmovie";
-#endif
-
-    // Now search the QtlMovie help file there.
-    QString htmlFile(QtlFile::search("qtlmovie.html", dirs));
-    if (htmlFile.isEmpty()) {
-        // File not found.
-        qtlError(this, tr("Cannot find help files.\nTry to reinstall QtlMovie."));
-    }
-    else {
-        // Open the HTML or a locale variant if it exists.
-        QDesktopServices::openUrl(QUrl::fromLocalFile(QtlTranslator::searchLocaleFile(htmlFile)));
-    }
+    QtlMovieHelp::showHelp(this, QtlMovieHelp::Home);
 }
 
 
